# packing-and-printing

./: .gitignore  README.md  branches.txt  razorpay_testing_plan.md  seed_product.py  test_api_orders.py
server/: .env.example  check_db.py  generate_previews.py  preview_templates.py  products_response.json  pyproject.toml  requirements.txt  seed_data.py  services_response.json  sse_test.html  test_auth.py  test_flow.py  test_flow_out.txt  test_order.py  testing_guide.md
server/alembic/: env.py
server/alembic/versions/: 00e68c821776_change_inquiry_price_columns_to_double.py  1c3900872797_add_invoice_fields.py  2063dce8ad8c_add_split_type_due_date_address.py  220b7855a8b0_add_order_and_receipt_sequences.py  2aeff7da8cce_add_milestone_split_type_and_custom_.py  2e647941266c_add_admin_notes_to_inquiry_groups.py  470671bb3887_initial_schema.py  54f2d08390ab_add_hsn_gst_display_ids.py  601d875a85dc_add_features_and_specifications_to_sub_.py  66ecea6a9d6c_add_is_offline_to_orders_and_inquiries.py  7dd2dc50c086_add_seoconfig_table.py  8465a306364a_add_invoice_data_column.py  8d1171b9cdf5_initial_schema.py  978d3fbe20ae_add_invoice_fields.py  d5d0392fa40c_add_address_and_order_snapshots.py  e090be59963a_apply_schema_updates.py  e82286e5f970_add_hsn_gst_fields.py  eb354b3ed850_add_is_phone_verified.py
server/app/: config.py  main.py
server/app/core/: colors.py  config.py  database.py  display_id.py  email.py  middleware.py  (+10 more)
server/email_previews/: admin_notice.html  custom_greeting.html  invoice.html  otp.html  password_reset.html  reminder.html
server/static/: README.md
(+304 files in other folders)
