[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==5.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.31.0",
    "authlib==1.6.8",
    "bcrypt==4.0.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudinary==1.44.1",
    "colorama==0.4.6",
    "cryptography==46.0.4",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "passlib==1.7.4",
    "pdfminer-six==20251230",
    "pdfplumber==0.11.9",
    "pillow==12.1.0",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pypdf==6.7.0",
    "pypdfium2==5.4.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "python-slugify==8.0.4",
    "qrcode==8.2",
    "razorpay==2.0.0",
    "redis==7.1.1",
    "reportlab==4.4.9",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "starlette==0.50.0",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
]
